2010-11-10  Ilya Sherman  <isherman@chromium.org>

Reviewed by Shinichiro Hamaji.

        Fix autofill popup height computation -- take icon heights into account.
        https://bugs.webkit.org/show_bug.cgi?id=49306

        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupListBox::layout):

Canonical link: https://commits.webkit.org/62214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71734 268f45cc-cd09-0410-ab3c-d52691b4dbfc